# FEDformer-Probabilistic-Time-Series-Forecasting-main

./: .gitignore  .pylintrc  GEMINI.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  tune_hyperparams.py  variants.json
data/: AAPL_features.csv  AMZN_features.csv  GOOGL_features.csv  META_features.csv  MSFT_features.csv  NVDA_features.csv  TSLA_features.csv  __init__.py  alpha_vantage_client.py  dataset.py  financial_dataset_builder.py  preprocessing.py  vix_data.py
data_test_full/: NVDA_features.csv
inference/: __init__.py  __main__.py  loader.py  predictor.py
models/: __init__.py  encoder_decoder.py  fedformer.py  flows.py  layers.py
scripts/: install_git_hooks.sh  run_ablation_matrix.py  run_multi_seed.py  test_full_pipeline.py  validate_forecast.py  verify_cp_walkforward.py
simulations/: __init__.py  portfolio.py  risk.py
tests/: conftest.py  test_ablation_matrix.py  test_architecture_and_leakage.py  test_calibration.py  test_checkpoint_selection.py  test_config_presets.py  test_critical_bottlenecks.py  test_critical_bottlenecks_benchmarks.py  test_data_integrity.py  test_dataset.py  test_encoder_decoder.py  test_experiment_outputs.py  test_experiment_registry.py  test_fedformer_basic.py  test_financial_dataset_builder.py  test_finetune.py  test_flows.py  test_forecast_output.py  test_inference.py  test_model_registry.py  test_preprocessing_pipeline.py  test_probabilistic_metrics.py  test_rehearsal_buffer.py  test_reproducibility.py  test_roundtrip.py  test_seed_aggregation.py  test_simulations.py  test_trainer_integration.py  (+6 more)
(+25 files in other folders)
